# django-template

./: .env.dist  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  docker-compose.yml  manage.py  pyproject.toml
apps/api/: mixins.py  urls.py
apps/authentication/: apis.py  backend.py  services.py  urls.py
apps/cost_center/: admin.py  apis.py  apps.py  filters.py  models.py  selectors.py  services.py  urls.py
apps/emails/: admin.py  api.py  models.py  serializers.py  services.py  urls.py  views.py
apps/product/: admin.py  apis.py  filters.py  models.py  selectors.py  services.py  urls.py
apps/token/: admin.py  models.py  services.py
apps/users/: admin.py  apis.py  models.py  selectors.py  services.py  urls.py
common/: detect.py  enums.py  models.py  permissions.py  services.py
errors/: apis.py  exception_handlers.py  services.py
routes/: urls.py
settings/configs/: base.py  env.py  local.py  old.base.py
settings/modules/: drf.py  rest_docs.py  sessions.py  swagger.py  token.py
settings/servers/: asgi.py  wsgi.py
